added apis, models and mongodb integration

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-MONGO_URI=""
+MONGO_URI="mongodb+srv://sharma:1234@cluster0.etun9nb.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+RAZORPAY_KEY_ID=rzp_test_xdQMVAMDTwGyFY
+RAZORPAY_KEY_SECRET=WnOo7a9aEZSy3lzVuHTFWXVo
