--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "version": "1.0.0",
     "main": "server.js",
     "scripts": {
+        "start": "node server.js",
+        "dev": "nodemon server.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "type": "module",
@@ -17,6 +19,7 @@
         "express": "^5.1.0",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.13.2",
-        "nodemon": "^3.1.9"
+        "nodemon": "^3.1.9",
+        "razorpay": "^2.9.6"
     }
 }
